--- a/translations/buildings+intl-icu.fr.xlf
+++ b/translations/buildings+intl-icu.fr.xlf
@@ -2841,7 +2841,7 @@
       </notes>
       <segment>
         <source>Falls du schon vor langer Zeit vergessen hast, wie köstlich ein Omelett mit gebratenen Chamignons, Kräutern und Speck ist, dürfte dieses Gebäude wohl eher unnütz für dich sein. Aber zumindest liefert es dir einige Eier. Was die Pilze betrifft, so musst du dich wohl an die Zombies draußen halten.</source>
-        <target>Si vous avez depuis longtemps oublié quel goût pouvait bien avoir une petite omelette aux champignons sautés, aux herbes et aux lardons, ce chantier ne vous sera d'aucune aide. Enfin, tout au plus, vous redécouvrirez le goût des oeufs. Pour les champignons, il faudra s'adresser au zombies dehors.</target>
+        <target>Si vous avez depuis longtemps oublié quel goût pouvait bien avoir une petite omelette aux champignons sautés, aux herbes et aux lardons, ce chantier ne vous sera d'aucune aide. Enfin, tout au plus, vous redécouvrirez le goût des oeufs. Pour les champignons, il faudra s'adresser aux zombies dehors.</target>
       </segment>
     </unit>
     <unit id="HpECVh5">
