--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -2244,7 +2244,7 @@
       </notes>
       <segment>
         <source>Wenn du nicht automatisch an einer Partie teilnehmen möchtest, sobald ein anderer Spieler der Koalition einer Stadt beitritt, stelle bitte ein: nicht zur Verfügung.</source>
-        <target>Si vous ne souhaitez pas rejoindre automatiquement une partie lorsqu\'un autre membre de la Coalition rejoint une ville, mettez vous en mode Indisponible !</target>
+        <target>Si vous ne souhaitez pas rejoindre automatiquement une partie lorsqu'un autre membre de la coalition rejoint une ville, mettez vous en mode Indisponible !</target>
       </segment>
     </unit>
     <unit id="uakGjzn" name="&lt;b&gt;{u1}&lt;/b&gt; hat &lt;b&gt;{u2}&lt;/b&gt; in die Koalition eingeladen.">
