--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9436,5 +9436,27 @@
         <target><![CDATA[¡Estás <strong>demasiado lejos del pueblo para utilizar este poder</strong>! Estás a {km_from_town}km cuando la distancia máxima es de 11km.</div>]]></target>
       </segment>
     </unit>
+    <unit id="dOYBNiy" name="Toxin">
+      <notes>
+        <note category="german">Toxin</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Toxin</source>
+        <target>Toxin</target>
+      </segment>
+    </unit>
+    <unit id="bGL408X">
+      <notes>
+        <note category="german">Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</source>
+        <target>Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
