--- a/translations/items+intl-icu.de.xlf
+++ b/translations/items+intl-icu.de.xlf
@@ -8806,5 +8806,23 @@
         <target><![CDATA[Du bist <strong>zu weit von der Stadt entfernt</strong>, um diese Fähigkeit benutzen zu können! Genauer gesagt bist du {km_from_town} km entfernt. Die maximale Entfernung darf höchstens 11 km betragen.]]></target>
       </segment>
     </unit>
+    <unit id="dOYBNiy" name="Toxin">
+      <notes>
+        <note category="from">db://ItemPrototype</note>
+      </notes>
+      <segment>
+        <source>Toxin</source>
+        <target>Toxin</target>
+      </segment>
+    </unit>
+    <unit id="bGL408X">
+      <notes>
+        <note category="from">db://ItemPrototype</note>
+      </notes>
+      <segment>
+        <source>Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</source>
+        <target>Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
