--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9476,5 +9476,27 @@
         <target><![CDATA[You are currently <strong>too far from the town to use this power</strong>! You are {km_from_town} km away, and the maximum distance is 11 km.</div>]]></target>
       </segment>
     </unit>
+    <unit id="dOYBNiy" name="Toxin">
+      <notes>
+        <note category="german">Toxin</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Toxin</source>
+        <target>Toxin</target>
+      </segment>
+    </unit>
+    <unit id="bGL408X">
+      <notes>
+        <note category="german">Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</note>
+        <note category="from">db://ItemPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</source>
+        <target>Du hältst das Fläschchen an deine Nase....WOOOW! Der Gestank alleine könnte ein Pferd töten.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
