--- a/translations/ghost+intl-icu.de.xlf
+++ b/translations/ghost+intl-icu.de.xlf
@@ -1702,5 +1702,23 @@
         <target>Kombiniert</target>
       </segment>
     </unit>
+    <unit id="NZdQf3X">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Ermöglicht es, in begehbaren Ruinen den Gegenstand "Blutdurchtränkter Verband" zu finden, aus dem Toxin hergestellt werden kann.</source>
+        <target>Ermöglicht es, in begehbaren Ruinen den Gegenstand "Blutdurchtränkter Verband" zu finden, aus dem Toxin hergestellt werden kann.</target>
+      </segment>
+    </unit>
+    <unit id="m9UhkBU" name="Toxin aktivieren">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Toxin aktivieren</source>
+        <target>Toxin aktivieren</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
