--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -23183,5 +23183,16 @@
         <target>What a disaster! {num} water rations are gone!</target>
       </segment>
     </unit>
+    <unit id="apksrtK" name="Du hast bereits etwas gegessen. Dir bleiben nur noch Drogen und Alkohol!">
+      <notes>
+        <note category="german">Du hast bereits etwas gegessen. Dir bleiben nur noch Drogen und Alkohol!</note>
+        <note category="from">twig:///templates/ajax/game/beyond/beyond.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du hast bereits etwas gegessen. Dir bleiben nur noch Drogen und Alkohol!</source>
+        <target>You have already eaten something. You only have drugs and alcohol left!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
